update phanart url

--- a/pages/phanart/guoxoua.html
+++ b/pages/phanart/guoxoua.html
@@ -26,21 +26,26 @@
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-01mona.png" alt="もなアイコン" loading="lazy"
                 class="phanart-popup-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1830947714634314068"></a>
         </div>
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-02miu.png" alt="美雨アイコン" loading="lazy" class="phanart-popup-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1830540898880663622"></a>
         </div>
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-03rinka.png" alt="凛花アイコン" loading="lazy"
                 class="phanart-popup-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1828822377775665252"></a>
         </div>
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-04hisui.png" alt="灯翠アイコン" loading="lazy"
                 class="phanart-popup-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1830629045912154192"></a>
         </div>
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-05moka.png" alt="百花アイコン" loading="lazy"
                 class="phanart-popup-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1829333278551339197"></a>
         </div>
     </div>
 </div>
@@ -49,6 +54,7 @@
     <h3>フリーヘッダー</h3>
     <p>ヘッダーとしての使用⭕️ ヘッダー以外での使用❌ 自作発言❌</p>
     <img src="/static/img/phanart/guoxoua/header-01.png" alt="ヘッダー" loading="lazy" class="phanart-popup-img">
+    <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1859945855052341551"></a>
     <p class="block-description">ご本人コメント</p>
     <p>使用する際はリプしてください🙇🏻‍♀️´-</p>
     <div class="tweet-container">
@@ -67,10 +73,12 @@
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/profile-02.png" alt="ハイネ自己紹介カード" loading="lazy"
                 class="phanart-popup-img" style="object-position: 50% 0%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1878391554055995562"></a>
         </div>
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/profile-01.png" alt="ハイネ自己紹介カード" loading="lazy"
                 class="phanart-popup-img" style="object-position: 50% 0%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1830473989396877719"></a>
         </div>
     </div>
     <div class="tweet-container">
@@ -83,6 +91,7 @@
         <div class="phanart-wrapper" style="width: 50%;">
             <img src="/static/img/phanart/guoxoua/netprint-01.png" alt="ネットプリント" loading="lazy"
                 class="phanart-popup-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1846588456807588100"></a>
         </div>
     </div>
     <p class="block-description">ご本人コメント</p>
@@ -94,26 +103,32 @@
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/001.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
                 style="object-position: 50% 10%; /* 上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1832781913985311128"></a>
         </div>
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/002.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
                 style="object-position: 50% 25%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1836239387946111203"></a>
         </div>
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/003.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
                 style="object-position: 100% 50%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1847851879554044099"></a>
         </div>
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/004.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
                 style="object-position: 50% 0%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1857800845305458853"></a>
         </div>
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/005.png" alt="" loading="lazy"
                 class="phanart-popup-img protected-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1876981220011102482"></a>
         </div>
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-10moka.png" alt="" loading="lazy"
                 class="phanart-popup-img protected-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1877614040035332495"></a>
         </div>
     </div>
 </div>
@@ -127,6 +142,7 @@
 <div id="phanart-modal" class="phanart-modal">
     <span id="phanart-modal-close">×</span>
     <img class="phanart-modal-content" id="phanart-modal-img">
+    <p><a class="phanart-modal-a" id="phanart-modal-orig-link" href="">X(Twitter)の投稿はこちら</a></p>
 </div>
 
 <div class="load-content" data-loadfile="/pages/parts/phanart-recruit"></div>
