--- a/pages/notice.html
+++ b/pages/notice.html
@@ -5,6 +5,25 @@
     <h1 class="glitch-text">お知らせ</h1>
 </div>
 
+<div class="contents_block" id="20250212">
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.02.12
+        <p><a href="?p=phanart">ファンアート集</a> に <a href="?p=phanart.oan">おあん</a> さんのページを追加しました。</p>
+    </div>
+</div>
+
+<div class="contents_block" id="20250207">
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.02.07
+        <p><a href="https://x.com/mothlamp_info">本サイトのX(Twitter)アカウント</a>
+            にて、ファントムシータ公式ホームページ内の会員コンテンツ「ハイネ」の更新通知を、既存の「シータ日記」に加え「質問箱」「お知らせ」も通知するようになりました。</p>
+    </div>
+</div>
+
 <div class="contents_block" id="20250119">
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
