--- a/pages/phanart.html
+++ b/pages/phanart.html
@@ -6,7 +6,7 @@
     <p>絵師さんによる素敵なファンアートを紹介します！</p>
 </div>
 
-<div class="load-content" data-loadfile="/pages/parts/phanart-copyright.html"></div>
+<div class="load-content" data-loadfile="/pages/parts/phanart-copyright"></div>
 
 <div class="contents_block contents_block_has_a phanart-artist-block">
     <a class="contents_block_a" href="?p=phanart.guoxoua"></a>
@@ -16,6 +16,11 @@
         style="object-position: 50% 65%; /* 左,上 */">
 </div>
 
+<div class="contents_block contents_block_has_a phanart-artist-block">
+    <a class="contents_block_a" href="?p=phanart.oan"></a>
+    <h3>おあん</h3>
+    <img src="/static/img/phanart/oan/000-cover.jpg" alt="" class="phanart-artist-cover">
+</div>
 
 <div class="load-content" data-loadfile="/pages/parts/phanart-recruit"></div>
 
