--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         gtag('config', 'GT-NM8CV7C9');
     </script>
 
-    <!-- phantom-siita head update 25.01.13 -->
+    <!-- mothlamp head update 25.02.12 -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="誘蛾灯の導き ファントムシータ非公式ファンサイトへようこそ。蝶の魅力に一緒に憑りつかれましょう。">
@@ -60,7 +60,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <!-- js -->
     <!-- <script src="/static/js/loading.js" data-load_page="true"></script> -->
-    <script src="/static/js/loading-ps.js" data-load_page="true"></script>
+    <script src="/static/js/loading-moth.js" data-load_page="true"></script>
     <script src="/static/js/load-contents.js"></script>
     <script src="/static/js/menu.js"></script>
     <script src="/static/js/para.js"></script>
