add glitch in index-page

--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -94,7 +94,7 @@
 
 <div class="contents_block contents_block_has_a phanart-link-block">
     <a class="contents_block_a" href="?p=phanart"></a>
-    <h2>ファンアート</h2>
+    <h2 class="glitch-text">ファンアート</h2>
     <p>絵師さんによる素敵なファンアートを紹介します！</p>
     <div class="phanart-slider-container">
         <div class="phanart-slider">
@@ -112,13 +112,13 @@
 
 <div class="contents_block contents_block_has_a">
     <a class="contents_block_a" href="?p=articles.2008-moth-to-a-flame-video"></a>
-    <h4>Moth to a flame</h4>
+    <h4 class="glitch-text">Moth to a flame</h4>
     <p>ハイネの撮影した 動画/写真 まとめ</p>
 </div>
 
 <div class="contents_block contents_block_has_a">
     <a class="contents_block_a" href="?p=articles.2007-akuma-night-video"></a>
-    <h4>悪魔 Night Duel Buster</h4>
+    <h4 class="glitch-text">悪魔 Night Duel Buster</h4>
     <p>ハイネの撮影した 動画/写真 まとめ</p>
 </div>
 
