--- a/pages/about.html
+++ b/pages/about.html
@@ -46,10 +46,12 @@
 </div>
 
 <div class="contents_block">
-    <h3>Twitter(X)</h3>
-    <p><a href="https://x.com/mothlamp_info">@mothlamp_info</a></p>
-    <p>本サイトのTwitter(X)アカウントでは、サイト内コンテンツの更新通知やその他お知らせの他、ファントムシータのファンクラブコンテンツ「シータ日記」の更新があった際に自動で投稿する機能を持たせています。よろしければフォローと通知のONをお願いします。
+    <h3>「ハイネ」会員コンテンツ更新通知について</h3>
+    <p></p>
+    <p>本サイトのX(Twitter)アカウント <a href="https://x.com/mothlamp_info">@mothlamp_info</a>
+        では、ファントムシータのファンクラブ「ハイネ」のコンテンツより「シータ日記」「質問箱」「お知らせ」の更新があった際に、自動で投稿します。フォロー、通知をオンにしていただくと、コンテンツの更新をいち早く知ることができます。
     </p>
+    <p>また、本サイト内コンテンツの更新やお知らせ、その他ファントムシータ関連の情報をポストします。</p>
 </div>
 
 <div class="contents_block">
@@ -63,11 +65,12 @@
     <p>
         本サイトの管理、コンテンツの作成は、tatsu <a href="https://twitter.com/ta_moon_">@ta_moon_</a> が行っております。
     </p>
-    <p>私については、<a href="?p=admin-profile">こちら</a> をご参照ください。</p>
+    <p>私については、<a href="?p=tatsu.profile">こちら</a>。 </p>
 </div>
 
 <div class="contents_block">
     <h3>ご寄付について</h3>
+    <p>いつもご利用いただきありがとうございます。</p>
     <p>
         本サイトに対してご寄付をいただける方がいらっしゃいましたら、<a href="?p=donation">こちら</a> をご参照ください。</p>
 </div>
