--- a/pages/tatsu/profile.html
+++ b/pages/tatsu/profile.html
@@ -46,6 +46,7 @@
     <p class="block-description">その他</p>
     <p>呼びタメ歓迎です、仲良くしてください！</p>
     <p>いろんなアーティストが好きなのでタイミングによって投稿内容が偏るけど、他アーティストの魅力とかを知る機会として見てくれたら嬉しい！</p>
+    <p>他アーティストなども含めてのプロフィールは <a href="https://tatsu.mothlamp.info/?p=profile">こちら</a> にあります。</p>
 </div>
 
 <div class="contents_block">
