add instagram profile

--- a/pages/tatsu/profile.html
+++ b/pages/tatsu/profile.html
@@ -17,6 +17,10 @@
     <p><a href="https://twitter.com/ta_moon_">@ta_moon_</a></p>
     <hr>
 
+    <p class="block-description">Instagram</p>
+    <p><a href="https://www.instagram.com/tatsu_haine">@tatsu_haine</a></p>
+    <hr>
+
     <p class="block-description">年代</p>
     <p>1999</p>
     <hr>
