--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <!-- js -->
-    <!-- <script src="/static/js/loading.js" data-load_page="true"></script> -->
-    <script src="/static/js/loading-moth.js" data-load_page="true"></script>
+    <script src="/static/js/loading.js" data-load_page="true"></script>
     <script src="/static/js/load-contents.js"></script>
     <script src="/static/js/menu.js"></script>
     <script src="/static/js/para.js"></script>
