add phanart-oan mtaf

--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -5,6 +5,21 @@
     <p style="text-align: center;">ファントムシータ 非公式 ファンサイト</p>
 </div>
 
+<div class="contents_block" style="padding-bottom: 0;"><!-- 余白調整 -->
+    <!-- Moth to a flame イラスト -->
+    <p style="text-align: center; font-size: 1.2rem; font-weight: bold; margin: 0;">1st WORLD TOUR</p>
+    <p style="text-align: center; font-size: 1.8rem; font-weight: bold; margin: 0;">"Moth to a flame"</p>
+    <p style="text-align: center; font-size: 1.4rem; font-weight: bold; margin: 0 0 10px 0;">お疲れさまでした！！</p>
+    <img src="/static/img/phanart/oan/033.png" alt="Moth to a flame" loading="lazy"
+        class="phanart-popup-img protected-img" style="max-height: 80vh; margin: 0 auto;">
+    <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893589730237063203"></a>
+    <p style="text-align: center;">イラスト：<a href="https://x.com/o_annn_/status/1893589730237063203">おあん</a>さん</p>
+    <p style="text-align: center;">他の素敵なイラストは<a href="?p=phanart.oan">こちら</a>から。</p>
+    <br>
+    <div class="load-content" data-loadfile="/pages/parts/phanart-copyright.html"></div>
+
+</div>
+
 <div class="contents_block">
     <h3 class="glitch-text">公式リンク</h3>
     <ul id="official-link">
@@ -95,7 +110,7 @@
 <div class="contents_block contents_block_has_a phanart-link-block">
     <a class="contents_block_a" href="?p=phanart"></a>
     <h2 class="glitch-text">ファンアート</h2>
-    <p>絵師さんによる素敵なファンアートを紹介します！</p>
+    <p class="keep-all-break-word">絵師さんによる素敵なファンアートを<wbr>紹介します！</p>
     <div class="phanart-slider-container">
         <div class="phanart-slider">
             <img src="/static/img/phanart/guoxoua/000-cover.jpg" alt="" class="phanart-link-img">
