--- a/pages/parts/phanart-copyright.html
+++ b/pages/parts/phanart-copyright.html
@@ -2,7 +2,7 @@
     <details>
         <summary>
             <h5 style="display: inline-block;">イラストの著作権について</h5>
-            <p>基本、無断利用禁止です。(タップで開きます)</p>
+            <p class="keep-all-break-word">無断利用禁止です。<wbr>(タップで開きます)</p>
         </summary>
         <hr>
         <p>
