--- a/pages/phanart.html
+++ b/pages/phanart.html
@@ -3,7 +3,7 @@
 
 <div class="contents_block">
     <h1 class="keep-all-break-word glitch-text">ファントムシータ ファンアート集</h1>
-    <p>絵師さんによる素敵なファンアートを紹介します！</p>
+    <p class="keep-all-break-word">絵師さんによる素敵なファンアートを<wbr>紹介します！</p>
 </div>
 
 <div class="load-content" data-loadfile="/pages/parts/phanart-copyright"></div>
