--- a/pages/phanart/guoxoua.html
+++ b/pages/phanart/guoxoua.html
@@ -53,8 +53,10 @@
 <div class="contents_block">
     <h3>フリーヘッダー</h3>
     <p>ヘッダーとしての使用⭕️ ヘッダー以外での使用❌ 自作発言❌</p>
-    <img src="/static/img/phanart/guoxoua/header-01.png" alt="ヘッダー" loading="lazy" class="phanart-popup-img">
-    <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1859945855052341551"></a>
+    <div class="phanart-wrapper">
+        <img src="/static/img/phanart/guoxoua/header-01.png" alt="ヘッダー" loading="lazy" class="phanart-popup-img">
+        <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1859945855052341551"></a>
+    </div>
     <p class="block-description">ご本人コメント</p>
     <p>使用する際はリプしてください🙇🏻‍♀️´-</p>
     <div class="tweet-container">
@@ -102,7 +104,7 @@
     <div class="phanart-container">
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/001.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
-                style="object-position: 50% 10%; /* 上 */">
+                style="object-position: 50% 10%; /* 左,上 */">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1832781913985311128"></a>
         </div>
         <div class="phanart-wrapper">
