--- a/pages/phanart/oan.html
+++ b/pages/phanart/oan.html
@@ -19,6 +19,19 @@
 
 <div class="load-content" data-loadfile="/pages/parts/phanart-copyright.html"></div>
 
+
+<div class="contents_block">
+    <!-- Moth to a flame イラスト -->
+    <div class="phanart-wrapper">
+        <img src="/static/img/phanart/oan/033.png" alt="Moth to a flame" loading="lazy"
+            class="phanart-popup-img protected-img" style="max-height: 80vh; margin: 0 auto;">
+        <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893589730237063203"></a>
+    </div>
+    <div class="tweet-container">
+        <a class="twitter-tweet-data" href="https://x.com/o_annn_/status/1893589730237063203"></a>
+    </div>
+</div>
+
 <div class="contents_block">
     <div class="phanart-container">
         <div class="phanart-wrapper">
@@ -152,6 +165,16 @@
         <div class="phanart-wrapper">
             <img src="/static/img/phanart/oan/032.png" alt="" loading="lazy" class="phanart-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1882083108457185578"></a>
+        </div>
+        <div class="phanart-wrapper">
+            <img src="/static/img/phanart/oan/033.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
+                style="object-position: 50% 22%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893589730237063203"></a>
+        </div>
+        <div class="phanart-wrapper">
+            <img src="/static/img/phanart/oan/034.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
+                style="object-position: 50% 22%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893618613317157169"></a>
         </div>
     </div>
 </div>
