add phanart-oan mtaf

--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -10,7 +10,7 @@
     <p style="text-align: center; font-size: 1.2rem; font-weight: bold; margin: 0;">1st WORLD TOUR</p>
     <p style="text-align: center; font-size: 1.8rem; font-weight: bold; margin: 0;">"Moth to a flame"</p>
     <p style="text-align: center; font-size: 1.4rem; font-weight: bold; margin: 0 0 10px 0;">お疲れさまでした！！</p>
-    <img src="/static/img/phanart/oan/033.png" alt="Moth to a flame" loading="lazy"
+    <img src="/static/img/phanart/oan/000-mtaf.jpg" alt="Moth to a flame" loading="lazy"
         class="phanart-popup-img protected-img" style="max-height: 80vh; margin: 0 auto;">
     <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893589730237063203"></a>
     <p style="text-align: center;">イラスト：<a href="https://x.com/o_annn_/status/1893589730237063203">おあん</a>さん</p>
