add phanart-oan mtaf

--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -14,8 +14,7 @@
         class="phanart-popup-img protected-img" style="max-height: 80vh; margin: 0 auto;">
     <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893589730237063203"></a>
     <p style="text-align: center;">イラスト：<a href="https://x.com/o_annn_/status/1893589730237063203">おあん</a>さん</p>
-    <p style="text-align: center;">他の素敵なイラストは<a href="?p=phanart.oan">こちら</a>から。</p>
-    <br>
+    <p style="text-align: center; margin-bottom: 15px;">他の素敵なイラストは<a href="?p=phanart.oan">こちら</a>から。</p>
     <div class="load-content" data-loadfile="/pages/parts/phanart-copyright.html"></div>
 
 </div>
