--- a/pages/tatsu/haine-grave.html
+++ b/pages/tatsu/haine-grave.html
@@ -2,8 +2,8 @@
 <div id="page-description" style="display: none;">推しの尊さによって4んでしまったハイネの墓場</div>
 
 <div class="contents_block">
-    <h1 class="glitch-text keep-all-break-word">ハイネ墓地</h1>
-    <p>推しの尊さによって4んでしまった<wbr>ハイネの墓場</p>
+    <h1 class="glitch-text">ハイネ墓地</h1>
+    <p class=" keep-all-break-word">推しの尊さによって4んでしまった<wbr>ハイネの墓場</p>
 
     <p>「私も入る。。。」という方は <a href="https://forms.gle/1WXxoDnpXBarRMm19">こちら</a> からお名前をお送りください！</p>
 </div>
