--- a/pages/tatsu/haine-grave.html
+++ b/pages/tatsu/haine-grave.html
@@ -52,8 +52,15 @@
     function generateAsciiArt(names) {
         return names.map(name => {
             name = convertToFullWidth(name); // 文字列を全角に変換
-            // return `＿＿\n${verticalString(name)}\n|￣￣￣￣￣|\n|　|三三|　|\n￣￣￣￣￣￣￣\n`;
-            return `＿＿\n${verticalString(name)}\n┌┴─┴┐\n│[ ＊ ]│\n[￣凸(￣)凸￣]\n`;
+
+            // ランダムに90%または10%で選択
+            if (Math.random() < 0.9) {
+                // 90%の確率で最初のASCIIアート
+                return `＿＿\n${verticalString(name)}\n|￣￣￣￣￣|\n|　|三三|　|\n￣￣￣￣￣￣￣\n`;
+            } else {
+                // 10%の確率で2番目のASCIIアート
+                return `＿＿\n${verticalString(name)}\n┌┴─┴┐\n│[ ＊ ]│\n[￣凸(￣)凸￣]\n`;
+            }
         }).join("\n");
     }
 
