--- a/pages/phanart/guoxoua.html
+++ b/pages/phanart/guoxoua.html
@@ -24,6 +24,31 @@
     <p>アイコンとしての使用⭕️ アイコン以外での使用❌ 自作発言❌</p>
     <div class="phanart-container">
         <div class="phanart-wrapper">
+            <img src="/static/img/phanart/guoxoua/icon-21mona.png" alt="もなアイコン" loading="lazy"
+                class="phanart-popup-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1897152835156107468"></a>
+        </div>
+        <div class="phanart-wrapper">
+            <img src="/static/img/phanart/guoxoua/icon-22miu.png" alt="美雨アイコン" loading="lazy" class="phanart-popup-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1897152844693954960"></a>
+        </div>
+        <div class="phanart-wrapper">
+            <img src="/static/img/phanart/guoxoua/icon-23rinka.png" alt="凛花アイコン" loading="lazy"
+                class="phanart-popup-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1897152835156107468"></a>
+        </div>
+        <div class="phanart-wrapper">
+            <img src="/static/img/phanart/guoxoua/icon-24hisui.png" alt="灯翠アイコン" loading="lazy"
+                class="phanart-popup-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1897152844693954960"></a>
+        </div>
+        <div class="phanart-wrapper">
+            <img src="/static/img/phanart/guoxoua/icon-25moka.png" alt="百花アイコン" loading="lazy"
+                class="phanart-popup-img">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1897152835156107468"></a>
+        </div>
+
+        <div class="phanart-wrapper">
             <img src="/static/img/phanart/guoxoua/icon-01mona.png" alt="もなアイコン" loading="lazy"
                 class="phanart-popup-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1830947714634314068"></a>
@@ -48,6 +73,17 @@
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1829333278551339197"></a>
         </div>
     </div>
+</div>
+
+<div class="contents_block">
+    <h3>名刺用素材</h3>
+    <p>保存、書き込みをして名刺として使用⭕️</p>
+    <p>自作発言❌</p>
+    <div class="phanart-wrapper">
+        <img src="/static/img/phanart/guoxoua/nametag-00-all.png" alt="" loading="lazy" class="phanart-popup-img"
+            style="max-height: 50vh; margin: 0 auto;">
+    </div>
+    <p style="font-weight: bold;">メンバーごと、ペアの素材は <a href="?p=phanart.guoxoua-nametag">こちら</a></p>
 </div>
 
 <div class="contents_block">
@@ -131,6 +167,11 @@
             <img src="/static/img/phanart/guoxoua/icon-10moka.png" alt="" loading="lazy"
                 class="phanart-popup-img protected-img">
             <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1877614040035332495"></a>
+        </div>
+        <div class="phanart-wrapper">
+            <img src="/static/img/phanart/guoxoua/006.png" alt="" loading="lazy" class="phanart-popup-img protected-img"
+                style="object-position: 50% 0%; /* 左,上 */">
+            <a class="phanart-popup-orig-link" href="https://x.com/uxwou_4/status/1896533752597393846"></a>
         </div>
     </div>
 </div>
