--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -87,6 +87,15 @@
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
+        </svg>2025.03.06
+        <p><a href="?p=phanart">ファンアート集</a> の <a href="?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページに <a
+                href="?p=phanart.guoxoua-nametag">名刺用素材</a> を追加しました。「〇〇会」などで素材としてご利用ください。</p>
+    </div>
+    <hr>
+
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
         </svg>2025.02.12
         <p><a href="?p=phanart">ファンアート集</a> に <a href="?p=phanart.oan">おあん</a> さんのページを追加しました。</p>
     </div>
@@ -236,4 +245,10 @@
             }
         });
     </script>
+</div>
+
+<div class="contents_block contents_block_has_a">
+    <a class="contents_block_a" href="?p=tatsu.haine-grave"></a>
+    <h4 class="glitch-text">ハイネ墓地</h4>
+    <p>※お遊びコンテンツです</p>
 </div>
