--- a/pages/notice.html
+++ b/pages/notice.html
@@ -9,6 +9,16 @@
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
+        </svg>2025.03.06
+        <p><a href="?p=phanart">ファンアート集</a> の <a href="?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページに <a
+                href="?p=phanart.guoxoua-nametag">名刺用素材</a> を追加しました。「〇〇会」などで素材としてご利用ください。</p>
+    </div>
+</div>
+
+<div class="contents_block" id="20250212">
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
         </svg>2025.02.12
         <p><a href="?p=phanart">ファンアート集</a> に <a href="?p=phanart.oan">おあん</a> さんのページを追加しました。</p>
     </div>
