--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
     <script>
         $('head').append('<script src="/static/js/async-load-twitter.js?nocache=' + new Date().getTime() + '" />');
     </script>
+    <script>
+        $('head').append('<script src="/static/js/async-load-youtube.js?nocache=' + new Date().getTime() + '" />');
+    </script>
     <script src="/static/js/glitch-animation.js"></script>
     <script src="/static/js/visibility-control.js"></script>
 
