--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -75,45 +75,13 @@
     <p>大切な注意事項が書いてあるので、ライブに参戦予定の方は要確認です！！(公式ホームページへジャンプします。)</p>
 </div>
 
-<div class="contents_block">
-    <h3 class="glitch-text">お知らせ</h3>
-    <hr>
-    <style>
-        .notice-div {
-            margin: 1% 2%;
-        }
-    </style>
 
-    <div class="notice-div">
-        <svg role="img" aria-label="蝶々">
-            <use href="#butterfly"></use>
-        </svg>2025.03.06
-        <p><a href="?p=phanart">ファンアート集</a> の <a href="?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページに <a
-                href="?p=phanart.guoxoua-nametag">名刺用素材</a> を追加しました。「〇〇会」などで素材としてご利用ください。</p>
-    </div>
-    <hr>
-
-    <div class="notice-div">
-        <svg role="img" aria-label="蝶々">
-            <use href="#butterfly"></use>
-        </svg>2025.02.12
-        <p><a href="?p=phanart">ファンアート集</a> に <a href="?p=phanart.oan">おあん</a> さんのページを追加しました。</p>
-    </div>
-    <hr>
-
-    <div class="notice-div">
-        <svg role="img" aria-label="蝶々">
-            <use href="#butterfly"></use>
-        </svg>2025.02.07
-        <p><a href="https://x.com/mothlamp_info">本サイトのX(Twitter)アカウント</a>
-            にて、ファントムシータ公式ホームページ内の会員コンテンツ「ハイネ」の更新通知を、既存の「シータ日記」に加え「質問箱」「お知らせ」も通知するようになりました。</p>
-    </div>
-    <hr>
-
-    <div class="link-btn-div">
-        <a href="?p=notice" class="link-btn-a">すべて見る</a>
-    </div>
+<div class="contents_block contents_block_has_a">
+    <a class="contents_block_a" href="?p=articles.2008-moth-to-a-flame-vlog"></a>
+    <h3 class="keep-all-break-word glitch-text">“Moth to a flame” 公式の投稿まとめ</h3>
+    <p>公式より投稿された、“Moth to a flame” Vlogなどの投稿をまとめています。</p>
 </div>
+
 
 <div class="contents_block contents_block_has_a phanart-link-block">
     <a class="contents_block_a" href="?p=phanart"></a>
@@ -251,4 +219,45 @@
     <a class="contents_block_a" href="?p=tatsu.haine-grave"></a>
     <h4 class="glitch-text">ハイネ墓地</h4>
     <p>※お遊びコンテンツです</p>
+</div>
+
+
+<div class="contents_block">
+    <h3 class="glitch-text">お知らせ</h3>
+    <hr>
+    <style>
+        .notice-div {
+            margin: 1% 2%;
+        }
+    </style>
+
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.03.06
+        <p><a href="?p=phanart">ファンアート集</a> の <a href="?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページに <a
+                href="?p=phanart.guoxoua-nametag">名刺用素材</a> を追加しました。「〇〇会」などで素材としてご利用ください。</p>
+    </div>
+    <hr>
+
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.02.12
+        <p><a href="?p=phanart">ファンアート集</a> に <a href="?p=phanart.oan">おあん</a> さんのページを追加しました。</p>
+    </div>
+    <hr>
+
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
+        </svg>2025.02.07
+        <p><a href="https://x.com/mothlamp_info">本サイトのX(Twitter)アカウント</a>
+            にて、ファントムシータ公式ホームページ内の会員コンテンツ「ハイネ」の更新通知を、既存の「シータ日記」に加え「質問箱」「お知らせ」も通知するようになりました。</p>
+    </div>
+    <hr>
+
+    <div class="link-btn-div">
+        <a href="?p=notice" class="link-btn-a">すべて見る</a>
+    </div>
 </div>
