update profile class

--- a/pages/tatsu/profile.html
+++ b/pages/tatsu/profile.html
@@ -75,7 +75,7 @@
 
 <div class="contents_block">
     <h3>ライブ参戦</h3>
-    <ul class="setlist-mokuji">
+    <ul class="anchor-list">
         <li><a href="#monayoko-yokohama">2024.10.13 - Ado JAPAN TOUR 2024 『モナ・リザの横顔』オープニングアクト @Kアリーナ横浜</a></li>
         <li><a href="#haine">2024.11.01 - 1st LIVE 「ハイネ」 @日本武道館</a></li>
         <li><a href="#akumanight">2024.12.17 - 悪魔のキッスpresents「悪魔Night Duel Buster」 @Spotify O-EAST</a></li>
