add for-ogimg system

--- a/pages/about.html
+++ b/pages/about.html
@@ -56,7 +56,8 @@
 
 <div class="contents_block">
     <h3>Discord</h3>
-    <p>本サイト運営によるDiscordサーバーがあります。サイト内コンテンツの更新情報の他、ハイネの交流でも利用できたら良いなと思っています。興味がありましたら <a href="?p=discord">こちら</a> からどうぞ。
+    <p>本サイト運営によるDiscordサーバーがあります。サイト内コンテンツの更新情報の他、ハイネの交流でも利用できたら良いなと思っています。興味がありましたら <a href="/?p=discord">こちら</a>
+        からどうぞ。
     </p>
 </div>
 
@@ -65,12 +66,12 @@
     <p>
         本サイトの管理、コンテンツの作成は、tatsu <a href="https://twitter.com/ta_moon_">@ta_moon_</a> が行っております。
     </p>
-    <p>私については、<a href="?p=tatsu.profile">こちら</a>。 </p>
+    <p>私については、<a href="/?p=tatsu.profile">こちら</a>。 </p>
 </div>
 
 <div class="contents_block">
     <h3>ご寄付について</h3>
     <p>いつもご利用いただきありがとうございます。</p>
     <p>
-        本サイトに対してご寄付をいただける方がいらっしゃいましたら、<a href="?p=donation">こちら</a> をご参照ください。</p>
+        本サイトに対してご寄付をいただける方がいらっしゃいましたら、<a href="/?p=donation">こちら</a> をご参照ください。</p>
 </div>
