--- a/pages/articles.html
+++ b/pages/articles.html
@@ -29,7 +29,7 @@
                 // privateではないデータのみ
                 if (!data_i.private) {
                     const listItem = `
-                    <a href="?p=articles.${data_i.p}" class="link-list-a">
+                    <a href="/?p=articles.${data_i.p}" class="link-list-a">
                         <li>
                             <p>
                                 <svg role="img" aria-label="蝶々">
@@ -44,7 +44,7 @@
                 else {
                     // privateのもの
                     const listItem = `
-                    <a href="?p=articles.${data_i.p}" class="link-list-a">
+                    <a href="/?p=articles.${data_i.p}" class="link-list-a">
                         <li>
                             <p>
                                 <svg role="img" aria-label="蝶々">
