--- a/pages/notice.html
+++ b/pages/notice.html
@@ -10,8 +10,8 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2025.03.06
-        <p><a href="?p=phanart">ファンアート集</a> の <a href="?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページに <a
-                href="?p=phanart.guoxoua-nametag">名刺用素材</a> を追加しました。「〇〇会」などで素材としてご利用ください。</p>
+        <p><a href="/?p=phanart">ファンアート集</a> の <a href="/?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページに <a
+                href="/?p=phanart.guoxoua-nametag">名刺用素材</a> を追加しました。「〇〇会」などで素材としてご利用ください。</p>
     </div>
 </div>
 
@@ -20,7 +20,7 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2025.02.12
-        <p><a href="?p=phanart">ファンアート集</a> に <a href="?p=phanart.oan">おあん</a> さんのページを追加しました。</p>
+        <p><a href="/?p=phanart">ファンアート集</a> に <a href="/?p=phanart.oan">おあん</a> さんのページを追加しました。</p>
     </div>
 </div>
 
@@ -39,8 +39,8 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2025.01.19
-        <p>ファンアートを描かれている絵師さんを紹介する <a href="?p=phanart">ファンアート集</a> のページを作成しました。</p>
-        <p><a href="?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページを作成しました。</p>
+        <p>ファンアートを描かれている絵師さんを紹介する <a href="/?p=phanart">ファンアート集</a> のページを作成しました。</p>
+        <p><a href="/?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページを作成しました。</p>
     </div>
 </div>
 
@@ -49,7 +49,7 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2025.01.13
-        <p>本サイト運営による <a href="?p=discord">Discordサーバー</a> のページを作成しました。</p>
+        <p>本サイト運営による <a href="/?p=discord">Discordサーバー</a> のページを作成しました。</p>
     </div>
 </div>
 
@@ -67,7 +67,7 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2025.01.05
-        <p>本サイト名「誘蛾灯の導き」を命名しました。サイト名の由来は <a href="?p=about">本サイトについて</a> に記載しています。</p>
+        <p>本サイト名「誘蛾灯の導き」を命名しました。サイト名の由来は <a href="/?p=about">本サイトについて</a> に記載しています。</p>
         <p>ファントムシータ公式ホームページ内の会員コンテンツ「ハイネ」内の一つ、「シータ日記」の更新通知機能を、 <a
                 href="https://x.com/mothlamp_info">本サイトのX(Twitter)アカウント</a> にて実装しました。</p>
     </div>
@@ -89,7 +89,7 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2024.12.18
-        <p>新規記事 <a href="?p=articles.2007-akuma-night-video">悪魔 Night Duel Buster 動画まとめ</a>
+        <p>新規記事 <a href="/?p=articles.2007-akuma-night-video">悪魔 Night Duel Buster 動画まとめ</a>
             を公開しました。ファンにより撮影された動画の投稿をまとめています。</p>
         <p>またフィルター機能により、メンバーや曲を絞って検索をすることが可能です。</p>
     </div>
@@ -100,7 +100,7 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2024.12.13
-        <p>新規記事 <a href="?p=articles.0002-setlist">セットリスト</a> を公開しました。ライブの際に更新します。</p>
+        <p>新規記事 <a href="/?p=articles.0002-setlist">セットリスト</a> を公開しました。ライブの際に更新します。</p>
     </div>
 </div>
 
@@ -109,7 +109,7 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2024.12.09
-        <p>新規記事 <a href="?p=articles.0003-hainenazo">ハイネ謎解き</a>
+        <p>新規記事 <a href="/?p=articles.0003-hainenazo">ハイネ謎解き</a>
             を公開しました。「モナリザの横顔」にて配布された謎解きの再現を掲載しています。</p>
     </div>
 </div>
@@ -119,7 +119,7 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2024.11.19
-        <p>新規記事 <a href="?p=articles.1001-otomodachi">おともだち</a> を公開しました。</p>
+        <p>新規記事 <a href="/?p=articles.1001-otomodachi">おともだち</a> を公開しました。</p>
     </div>
 </div>
 
@@ -129,6 +129,6 @@
             <use href="#butterfly"></use>
         </svg>2024.11.13
         <p>本サイトを公開しました。</p>
-        <p>新規ページ <a href="?p=web">Web記事一覧</a> を公開しました。</p>
+        <p>新規ページ <a href="/?p=web">Web記事一覧</a> を公開しました。</p>
     </div>
 </div>
