--- a/pages/phanart/guoxoua-nametag.html
+++ b/pages/phanart/guoxoua-nametag.html
@@ -125,7 +125,7 @@
 </div>
 
 <div class="contents_block">
-    <p>あぐさんの他のイラストは <a href="?p=phanart.guoxoua">こちら</a></p>
+    <p>あぐさんの他のイラストは <a href="/?p=phanart.guoxoua">こちら</a></p>
 </div>
 
 <div id="phanart-modal" class="phanart-modal">
