--- a/pages/web.html
+++ b/pages/web.html
@@ -38,7 +38,7 @@
                             </p>
                             <p class="title">${web.title}</p>
                             <p class="media">${web.media}</p>
-                            ${web.local_link ? `<a href="?p=web.${web.local_link}" class="local-link-a local">記事へ</a>` : ''}
+                            ${web.local_link ? `<a href="/?p=web.${web.local_link}" class="local-link-a local">記事へ</a>` : ''}
                         </li>
                     </a>
                 `;
