--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ l105 32 120 106 c66 58 146 127 178 153 l59 47 -434 -2 c-238 -1 -458 -3 -488
             <div class="contents_block">
                 <p class="donation-text">＼このサイトが役に立ったら／</p>
                 <div class="donation-block">
-                    <a href="?p=donation" class="donation-button" style="margin-top: 0;">
+                    <a href="/?p=donation" class="donation-button" style="margin-top: 0;">
                         <svg role="img" aria-label="蝶々">
                             <use href="#butterfly"></use>
                         </svg>
@@ -310,8 +310,8 @@ l105 32 120 106 c66 58 146 127 178 153 l59 47 -434 -2 c-238 -1 -458 -3 -488
 
             <footer>
                 <div class="footer-link">
-                    <a href="?p=about">本サイトについて</a>
-                    <a href="?p=tatsu.profile">管理人プロフィール</a>
+                    <a href="/?p=about">本サイトについて</a>
+                    <a href="/?p=tatsu.profile">管理人プロフィール</a>
                     <a href="https://forms.gle/nSAq8ozNZM46TPYM7">お問い合わせ</a>
                 </div>
                 <img src="/static/logo/tatsu-logo-no-bg.png" alt="logo" class="bottom_logo">
