--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -14,7 +14,7 @@
         class="phanart-popup-img protected-img" style="max-height: 80vh; margin: 0 auto;">
     <a class="phanart-popup-orig-link" href="https://x.com/o_annn_/status/1893589730237063203"></a>
     <p style="text-align: center;">イラスト：<a href="https://x.com/o_annn_/status/1893589730237063203">おあん</a>さん</p>
-    <p style="text-align: center; margin-bottom: 15px;">他の素敵なイラストは<a href="?p=phanart.oan">こちら</a>から。</p>
+    <p style="text-align: center; margin-bottom: 15px;">他の素敵なイラストは<a href="/?p=phanart.oan">こちら</a>から。</p>
     <div class="load-content" data-loadfile="/pages/parts/phanart-copyright.html"></div>
 
 </div>
@@ -77,14 +77,14 @@
 
 
 <div class="contents_block contents_block_has_a">
-    <a class="contents_block_a" href="?p=articles.2008-moth-to-a-flame-vlog"></a>
+    <a class="contents_block_a" href="/?p=articles.2008-moth-to-a-flame-vlog"></a>
     <h3 class="keep-all-break-word glitch-text">“Moth to a flame” 公式の投稿まとめ</h3>
     <p>公式より投稿された、“Moth to a flame” Vlogなどの投稿をまとめています。</p>
 </div>
 
 
 <div class="contents_block contents_block_has_a phanart-link-block">
-    <a class="contents_block_a" href="?p=phanart"></a>
+    <a class="contents_block_a" href="/?p=phanart"></a>
     <h2 class="glitch-text">ファンアート</h2>
     <p class="keep-all-break-word">絵師さんによる素敵なファンアートを<wbr>紹介します！</p>
     <div class="phanart-slider-container">
@@ -102,13 +102,13 @@
 </div>
 
 <div class="contents_block contents_block_has_a">
-    <a class="contents_block_a" href="?p=articles.2008-moth-to-a-flame-video"></a>
+    <a class="contents_block_a" href="/?p=articles.2008-moth-to-a-flame-video"></a>
     <h4 class="glitch-text">Moth to a flame</h4>
     <p>ハイネの撮影した 動画/写真 まとめ</p>
 </div>
 
 <div class="contents_block contents_block_has_a">
-    <a class="contents_block_a" href="?p=articles.2007-akuma-night-video"></a>
+    <a class="contents_block_a" href="/?p=articles.2007-akuma-night-video"></a>
     <h4 class="glitch-text">悪魔 Night Duel Buster</h4>
     <p>ハイネの撮影した 動画/写真 まとめ</p>
 </div>
@@ -119,7 +119,7 @@
     <ul id="articles" class="link-list">
     </ul>
     <div class="link-btn-div">
-        <a href="?p=articles" class="link-btn-a">すべて見る</a>
+        <a href="/?p=articles" class="link-btn-a">すべて見る</a>
     </div>
     <script>
         const articles_json_path = `/pages/articles/articles-data.json?nocache=${new Date().getTime()}`;
@@ -138,7 +138,7 @@
                             // show-index が true のデータのみ処理
                             if (data_i.show_index) {
                                 const listItem = `
-                                <a href="?p=articles.${data_i.p}" class="link-list-a">
+                                <a href="/?p=articles.${data_i.p}" class="link-list-a">
                                     <li>
                                         <p>
                                             <svg role="img" aria-label="蝶々">
@@ -173,7 +173,7 @@
     <ul id="web" class="link-list">
     </ul>
     <div class="link-btn-div">
-        <a href="?p=web" class="link-btn-a">すべて見る</a>
+        <a href="/?p=web" class="link-btn-a">すべて見る</a>
     </div>
     <script>
         const apiurl = "https://script.google.com/macros/s/AKfycbyWOBPQTSR_-Y4hdSNbY02c8OhkYEwIRJxyjEQ7j58H0Dyqpi4D7IIFVvtW33rFnGIc/exec";
@@ -202,7 +202,7 @@
                                     </p>
                                     <p class="title">${web.title}</p>
                                     <p class="media">${web.media}</p>
-                                    ${web.local_link ? `<a href="?p=web.${web.local_link}" class="local-link-a local">記事へ</a>` : ''}
+                                    ${web.local_link ? `<a href="/?p=web.${web.local_link}" class="local-link-a local">記事へ</a>` : ''}
                                 </li>
                             </a>
                     `;
@@ -216,7 +216,7 @@
 </div>
 
 <div class="contents_block contents_block_has_a">
-    <a class="contents_block_a" href="?p=tatsu.haine-grave"></a>
+    <a class="contents_block_a" href="/?p=tatsu.haine-grave"></a>
     <h4 class="glitch-text">ハイネ墓地</h4>
     <p>※お遊びコンテンツです</p>
 </div>
@@ -235,8 +235,8 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2025.03.06
-        <p><a href="?p=phanart">ファンアート集</a> の <a href="?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページに <a
-                href="?p=phanart.guoxoua-nametag">名刺用素材</a> を追加しました。「〇〇会」などで素材としてご利用ください。</p>
+        <p><a href="/?p=phanart">ファンアート集</a> の <a href="/?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページに <a
+                href="/?p=phanart.guoxoua-nametag">名刺用素材</a> を追加しました。「〇〇会」などで素材としてご利用ください。</p>
     </div>
     <hr>
 
@@ -244,7 +244,7 @@
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
         </svg>2025.02.12
-        <p><a href="?p=phanart">ファンアート集</a> に <a href="?p=phanart.oan">おあん</a> さんのページを追加しました。</p>
+        <p><a href="/?p=phanart">ファンアート集</a> に <a href="/?p=phanart.oan">おあん</a> さんのページを追加しました。</p>
     </div>
     <hr>
 
@@ -258,6 +258,6 @@
     <hr>
 
     <div class="link-btn-div">
-        <a href="?p=notice" class="link-btn-a">すべて見る</a>
+        <a href="/?p=notice" class="link-btn-a">すべて見る</a>
     </div>
 </div>
