--- a/pages/phanart.html
+++ b/pages/phanart.html
@@ -9,7 +9,7 @@
 <div class="load-content" data-loadfile="/pages/parts/phanart-copyright"></div>
 
 <div class="contents_block contents_block_has_a phanart-artist-block">
-    <a class="contents_block_a" href="?p=phanart.guoxoua"></a>
+    <a class="contents_block_a" href="/?p=phanart.guoxoua"></a>
     <h3 style="font-family: Meiryo, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;">कㄑ”‎^. .^ ੭
     </h3>
     <img src="/static/img/phanart/guoxoua/000-cover.jpg" alt="" class="phanart-artist-cover"
@@ -17,7 +17,7 @@
 </div>
 
 <div class="contents_block contents_block_has_a phanart-artist-block">
-    <a class="contents_block_a" href="?p=phanart.oan"></a>
+    <a class="contents_block_a" href="/?p=phanart.oan"></a>
     <h3>おあん</h3>
     <img src="/static/img/phanart/oan/000-cover.jpg" alt="" class="phanart-artist-cover">
 </div>
