--- a/pages/phanart/oan.html
+++ b/pages/phanart/oan.html
@@ -2,6 +2,17 @@
 <div id="page-description" style="display: none;">おあんさんのイラストを紹介します！</div>
 <div id="page-ogimg" style="display: none;">https://mothlamp.info/static/img/phanart/oan/000-ogimg.jpg</div>
 
+<script>
+    // URL書き換え
+    $(document).ready(function () {
+        let currentUrl = new URL(window.location.href);
+        let currentParams = new URLSearchParams(currentUrl.search);
+        let newUrl = "/?" + currentParams.toString();
+        $(window).on("load", function () {
+            history.replaceState(null, "", "/r/oan?" + currentParams.toString());
+        });
+    });
+</script>
 
 <script src="/static/js/phanart-popup.js"></script>
 
