--- a/pages/phanart/guoxoua.html
+++ b/pages/phanart/guoxoua.html
@@ -4,14 +4,11 @@
 
 <script>
     // URL書き換え
-    $(document).ready(function () {
+    window.onload = function () {
         let currentUrl = new URL(window.location.href);
         let currentParams = new URLSearchParams(currentUrl.search);
-        let newUrl = "/?" + currentParams.toString();
-        $(window).on("load", function () {
-            history.replaceState(null, "", "/r/guoxoua?" + currentParams.toString());
-        });
-    });
+        history.replaceState(null, "", "/r/guoxoua?" + currentParams.toString());
+    };
 </script>
 
 <script src="/static/js/phanart-popup.js"></script>
