--- a/pages/phanart/oan.html
+++ b/pages/phanart/oan.html
@@ -3,12 +3,11 @@
 <div id="page-ogimg" style="display: none;">https://mothlamp.info/static/img/phanart/oan/000-ogimg.jpg</div>
 
 <script>
-    // URL書き換え
-    window.onload = function () {
+    (function () {
         let currentUrl = new URL(window.location.href);
         let currentParams = new URLSearchParams(currentUrl.search);
         history.replaceState(null, "", "/r/oan?" + currentParams.toString());
-    };
+    })();
 </script>
 
 <script src="/static/js/phanart-popup.js"></script>
