--- a/pages/index-page.html
+++ b/pages/index-page.html
@@ -234,26 +234,18 @@
     <div class="notice-div">
         <svg role="img" aria-label="蝶々">
             <use href="#butterfly"></use>
+        </svg>2025.03.11
+        <p><a href="/?p=articles.2008-moth-to-a-flame-vlog">Phantom Siita 1st WORLD TOUR “Moth to a flame” 公式の投稿まとめ</a>
+            を公開しました。</p>
+    </div>
+    <hr>
+
+    <div class="notice-div">
+        <svg role="img" aria-label="蝶々">
+            <use href="#butterfly"></use>
         </svg>2025.03.06
         <p><a href="/?p=phanart">ファンアート集</a> の <a href="/?p=phanart.guoxoua">कㄑ”‎^. .^ ੭</a> さんのページに <a
                 href="/?p=phanart.guoxoua-nametag">名刺用素材</a> を追加しました。「〇〇会」などで素材としてご利用ください。</p>
-    </div>
-    <hr>
-
-    <div class="notice-div">
-        <svg role="img" aria-label="蝶々">
-            <use href="#butterfly"></use>
-        </svg>2025.02.12
-        <p><a href="/?p=phanart">ファンアート集</a> に <a href="/?p=phanart.oan">おあん</a> さんのページを追加しました。</p>
-    </div>
-    <hr>
-
-    <div class="notice-div">
-        <svg role="img" aria-label="蝶々">
-            <use href="#butterfly"></use>
-        </svg>2025.02.07
-        <p><a href="https://x.com/mothlamp_info">本サイトのX(Twitter)アカウント</a>
-            にて、ファントムシータ公式ホームページ内の会員コンテンツ「ハイネ」の更新通知を、既存の「シータ日記」に加え「質問箱」「お知らせ」も通知するようになりました。</p>
     </div>
     <hr>
 
