--- a/pages/tatsu/profile.html
+++ b/pages/tatsu/profile.html
@@ -6,11 +6,14 @@
     <p class="update">更新 : 2025.02.11</p>
 </div>
 
+<div class="contents_block contents_block_has_a">
+    <a class="contents_block_a" href="/?p=tatsu.diary-2024"></a>
+    <h4 class="glitch-text">tatsuのハイネ推し活記録</h4>
+</div>
 
 <div class="contents_block">
     <p class="block-description">名前</p>
     <p>tatsu</p>
-
     <hr>
 
     <p class="block-description">X(Twitter)</p>
